assets/style.css
body {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 14px;
  background-image: url('tiny_grid.png');
  background-size: 26px 26px;
  margin: 0;
}

a {
  color: rgb(114, 189, 53);
  font-weight: bold;
}

a:hover {
  text-decoration: none;
}

.gh-link {
  float: right;
  font-size: 12px;
  margin-right: 4px;
  text-transform: none;
}

.gh-link a {
  color: #666;
}

header {
  background-color: rgba(255,255,255,0.8);
  padding: 10px 5px;
  border: 2px solid rgb(168,168,168);
  border-left: 0;
  border-right: 0
}

h1 {
  font-size: 12px;
  display: inline;
  position: relative;
}

.hammerpick {
  line-height: 12px;
  font-size: 38px;
  margin-left: 5px;
  float: left;
  color: rgb(114, 204, 40);
}



.subhead {
  font-size: 12px;
  text-transform: none;
}

header, h1, h2, h3 {
  padding-left: 10px;
  text-align: left;
  text-transform: uppercase;
}

h2 {
  font-size: 14px;
}

section {
  margin-bottom: 10px;
}

#current-request {
  background-color: rgba(236, 236, 236, 0.8);
  padding: 5px 10px;
  border-bottom: 1px solid silver;
  -webkit-transition: background-color 0.2s ease-in-out;                 
  -moz-transition: background-color 0.2s ease-in-out;                
  -o-transition: background-color 0.2s ease-in-out;  
  -ms-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
}

#current-request.highlight {

  background-color: rgb(241, 255, 229);
}

#request-history {
  font-family: monospace;
  margin: 0px 30px;
  padding-top: 0;
}

#request-history .request {
  padding: 10px 10px;
  border-top: 5px solid silver;
  margin-bottom: 10px;

  background-color: rgb(255,255,255);
}

#request-history .server {
  font-size: 10px;
  margin: 2px 0 4px 0;
}

#content {
  background-color: rgba(255,255,255,0.7);
  color: #333;
  margin: 0px auto;
  display: table;
  width: 100%;
  padding: 5px 0px;
  border-bottom: 1px solid #eee;
}

.request-form form {
  display: table;
  width: 100%;
}

textarea {
  line-height: 13px;
}

.request-form form.method-post textarea, .request-form form.method-put textarea {
  display: block;
}

.request-form .errors {
  font-weight: bold;
  background-color: #fee;
  margin: 5px 0;
}

.request-form textarea {
  width: 100%;
  min-height: 80px;
}

.request-form .fields {
  display: table-row;
}

.request-form #path {
  display: table-cell;
  min-width: 300px;
}
#method, #server {
  display: table-cell;
}


#command-bar .labels, #command-bar .fields {
  width: 920px;
  display: table-row;
}
#command-bar .labels input, #command-bar .labels select, #command-bar .labels label, #command-bar .fields input, #command-bar .fields select, #command-bar .fields label {
  display: inline-block;
  padding: 2px 1px;
  margin: 0px 5px;
}
#command-bar .labels #ajax-method, #command-bar .labels #ajax-method-label, #command-bar .fields #ajax-method, #command-bar .fields #ajax-method-label {
  width: 80px;
}
#command-bar .labels #server, #command-bar .labels #server-label, #command-bar .fields #server, #command-bar .fields #server-label {
  width: 200px;
}
#command-bar .labels #path, #command-bar .labels #path-label, #command-bar .fields #path, #command-bar .fields #path-label {
  width: 500px;
}

#body {
  display: block;
  float: left;
  width: 450px;
  min-height: 500px;
  margin-top: 10px;
}

#body label, #response label {
  font-variant: small-caps;
}

.response-cont, .body-cont {
  position: relative;
  clear: both;
}

textarea.body {
  background-color: #f8f8f8;
}

.historical-req {
  padding: 0 5px
}

.historical-req .url {
  font-size: 12px;
}

.response-cont .response-label, .body-cont .body-label {
  font-size: 11px;
  position: absolute;
  top: 0;
  right: 50%;
  margin-right: -60px;
  padding: 1px 4px 1px 3px;
  opacity: 0.8;
}

.response-cont {
  border: 1px solid;
  width: 100%;
  border-color: rgb(71, 36, 255);
  max-height: 500px;
  overflow: scroll;
}

.response-label {
  background: rgb(71, 36, 255);
  color: #fafafa;
}

.body-cont textarea.body {
  border-color: rgba(180,180,180,1);
}

.body-label {
  background: rgba(180,180,180,1);
}

.arrow {
  font-weight: bold;
}

.historical-req .method {
  font-weight: bold;
}


#body {
  margin-right: 15px;
}

textarea.response, textarea.body {
  white-space: pre-wrap;
  margin: 0;
  border: 1px solid silver;
  border-top: 1px solid silver;
  width: 100%;
  color: black;
  overflow: auto;
}

.api {
  background-color: #f8f8f8;
  text-transform: uppercase;
  padding: 1px 2px;
}

.status {
  font-weight: bold
}

.run-again {
  float: right;
  cursor: pointer;
  margin-right: 10px;
  font-size: 18px;
  line-height: 12px;
  top: 4px;
  position: relative;
}

.run-again:hover:after {
  content: "un Again";
  font-size:12px;
}

.run-again:hover {
  color: gray;
}

[data-status-group="errored"]:before {
  color: red;
  content: "CONN ERR ";
}

.response-cont:hover .response-label, .body-cont:hover .body-label {
  opacity: 0.3;
  right: 0;
  margin-right: 0;
  -webkit-transition: all 0.05s ease-in-out;                 
  -moz-transition: all 0.05s ease-in-out;                
  -o-transition: all 0.05s ease-in-out;  
  -ms-transition: all 0.05s ease-in-out;
  transition: all 0.05s ease-in-out;
}

.response-cont[data-status-group="500"] {
  border-color: red;
}

.response-cont[data-status-group="500"] .response-label {
  background-color: red;
}
.status[data-status-group="500"] {
  color: red;
}

.response-cont[data-status-group="400"] {
  border-color: orangered;
}
.response-cont[data-status-group="400"] .response-label {
  background-color: orangered;
}
.status[data-status-group="400"] {
  color: orangered;
}

.response-cont[data-status-group="300"] {
  border-color: purple;
}
.response-cont[data-status-group="300"] .response-label {
  background-color: rgb(114, 204, 40);
}
.status[data-status-group="300"] {
  color: rgb(114, 204, 40);
}

.response-cont[data-status-group="200"] {
  border-color: rgb(114, 204, 40);
}
.response-cont[data-status-group="200"] .response-label {
  background-color: rgb(114, 204, 40);
}
.status[data-status-group="200"] {
  color: rgb(114, 204, 40);
}


.method-path {
  padding-bottom: 4px;
}

textarea {
  font-family: monospace;
  font-size: 14px;
  display: block;
  width: 100%;
  background: transparent;
}

#submit-req {
  width: 100%;
}

.fmt-nodes-top {
  font-size: 12px;
}

.fmt-node:hover {
  /*background-color: rgb(255,255,0);*/
}

.fmt-nodes {
  padding-left: 10px;
}

.fmt-node-name {
  color: #444;
}

.fmt-node-value {
  font-weight: bold;
}

.fmt-nodes img {
  width: 100px;
}

